cmake_minimum_required(VERSION 3.24)
project(C__)

set(CMAKE_CXX_STANDARD 23)

add_executable(BinarySearchTree BinarySearchTree.cpp BinarySearchTree.cpp)
add_executable(homework20221215-1 homework20221215.cpp homework20221215.cpp)
add_executable(heap heap.cpp)
add_executable(priority_queue priority_queue.cpp)
add_executable(test1 test1.cpp)
add_executable(test2 test2.cpp)
add_executable(test2out test2out.cpp)
add_executable(test3 test3.cpp)
add_executable(test4 test4.cpp)